--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   xml: ^6.2.2
   archive: ^3.3.6
+  google_maps_flutter_web: ^0.4.0+7
 
 dev_dependencies:
   flutter_test:
